filtrage librairies LiR et parisienne

--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin="" defer></script>
     <script src="./main.js"defer></script>
+    <script src="./api.js" defer></script>
 
 </head>
 <body>
+    <main>
+        <h1>Les librairies indépendantes de Paris</h1>
     <div id="map"></div>
+    <section>
+        <h2>Liste des librairies indépendantes</h2>
+        <div class="liste" id="0"></div>
+        <div class="liste" id="1"></div>
+        <div class="liste" id="2"></div>
+        <div class="liste" id="3"></div>
+        <div class="liste" id="4"></div>
+        <div class="liste" id="5"></div>
+        <div class="liste" id="6"></div>
+        <div class="liste" id="7"></div>
+        <div class="liste" id="8"></div>
+        <div class="liste" id="9"></div>
+    </section>
+    </main>
+    
 </body>
 </html>
