--- a/index.html
+++ b/index.html
@@ -21,16 +21,7 @@
     <div id="map"></div>
     <section>
         <h2>Liste des librairies indépendantes</h2>
-        <div class="liste" id="0"></div>
-        <div class="liste" id="1"></div>
-        <div class="liste" id="2"></div>
-        <div class="liste" id="3"></div>
-        <div class="liste" id="4"></div>
-        <div class="liste" id="5"></div>
-        <div class="liste" id="6"></div>
-        <div class="liste" id="7"></div>
-        <div class="liste" id="8"></div>
-        <div class="liste" id="9"></div>
+        <div class="container" id="0"></div>
     </section>
     </main>
     
