--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <section>
         <h2>Liste des librairies indépendantes</h2>
         <div class="container" id="0"></div>
+        <div class="pages"></div>
     </section>
     </main>
-    
 </body>
 </html>
