--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
 <body>
     <main>
         <h1><span>ParisLibr.</span></h1>
+        <section class="accueil"> 
+        <div class ="texte"> 
         <p>Trouve la librairie indépendante la plus proche de chez toi.</p>
+        <aside>
+            <p>
+               Toutes les librairies référencées ont reçu le label "Librairie indépendante de Référence"
+            </p>
+           </aside>
+    </div>
         <!-- affichage de la carte -->
     <div id="map"></div>
+        </section>
+        
     <!-- liste des librairies parisiennes indépendantes -->
     <section>
         <!-- 10 librairies par pages -->
