maj html et css

--- a/index.html
+++ b/index.html
@@ -49,13 +49,19 @@
 
     </section>
     <!-- pagination, besoin de 10 pages -->
-    <section>
-        <div class="allbuttons">
+    <section class="allbuttons">
         <button class= "navigation" onclick="history.back(-1)">Précédent</button>
         <div class="pages"></div>
         <button class= "navigation" onclick="history.back(-1)">Suivant</button>
-    </div>
     </section>
     </main>
+    <footer>
+        <nav>Produced by : 
+        <span>Ketsia Eloi</span>
+        <span>Anne Kaftal</span>
+        <span>Alix Levé</span>
+        </nav>
+        <nav>Promo Ella Shohat</nav>
+    </footer>
 </body>
 </html>
